--- a/spotify.html
+++ b/spotify.html
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="relative grid grid-cols-12 gap-4 mx-auto max-w-md">
-          <input type="text" id="searchInput" placeholder="Search Spotify By Dimzz" class="col-span-9 border border-gray-300 px-4 py-2 rounded-l-md focus:outline-none focus:ring focus:border-blue-300 dark:bg-gray-700 dark:text-white input-effect">
+          <input type="text" id="searchInput" placeholder="Search Spotify By Ham -kun" class="col-span-9 border border-gray-300 px-4 py-2 rounded-l-md focus:outline-none focus:ring focus:border-blue-300 dark:bg-gray-700 dark:text-white input-effect">
           <button onclick="search()" class="col-span-3 bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300"><i class="fas fa-search"></i></button>
         </div>
         <div id="loader" class="hidden flex items-center justify-center mt-5">
