--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spotify - Ham -kun</title>
+  <meta content="Play & Download Spotify Free" name="description">
+  <meta content="Play Spotify Free" name="keywords">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="shortcut icon" href="https://cdn.arifzyn.tech/f/pac2oeis.jpg">
   <style>
   	body {
     font-family: 'Roboto', Helvetica, Arial, sans-serif;
